--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "self_update_test"
-version = "0.1.9"
+version = "0.1.11"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -19,3 +19,7 @@ surf = "2.3.2"
 anyhow = "1.0.69"
 futures = "0.3.26"
 semver = "1.0.16"
+dotenv = "0.15.0"
+
+[target.aarch64-unknown-linux-musl]
+linker = "aarch64-linux-gnu-gcc"
